--- a/package.json
+++ b/package.json
@@ -16,8 +16,5 @@
     "url": "https://github.com/xmhscratch/solais-server-api/issues"
   },
   "homepage": "https://github.com/xmhscratch/solais-server-api#readme",
-  "dependencies": {
-    "lru-cache": "^4.1.1",
-    "mysql": "^2.14.1"
-  }
+  "dependencies": {}
 }
