--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "solais-server-api",
+  "name": "@claimh/solais-server-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "private": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/xmhscratch/solais-server-api.git"
