--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@claimh/solais-server-api",
+  "name": "solais-server-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
